# pterodactyl-desktop

./: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  main.rs  ws_proxy.rs
src/components/layout/: AppLayout.tsx  ProfileSwitcher.tsx  Sidebar.tsx  TopBar.tsx  UpdateBadge.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorState.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx
src/features/admin/: hooks.ts
src/features/backups/: hooks.ts
src/features/console/: useConsoleSocket.ts
src/features/files/: hooks.ts
src/features/schedules/: hooks.ts
src/features/servers/: adminAdapter.ts  hooks.ts  statusUtils.ts
src/features/startup/: hooks.ts
src/features/subusers/: hooks.ts
src/hooks/: useApi.ts  useAutoRefresh.ts  useConfirm.ts  useDebounce.ts  useDiscordPresence.ts  useToast.ts  useUpdater.ts
src/lib/: storage.ts
src/lib/api/: apiClientFactory.ts  applicationApi.ts  clientApi.ts  downloadFile.ts  (+4 more)
src/pages/: AdminPage.tsx  DashboardPage.tsx  ProfilesPage.tsx  ServerDetailPage.tsx  SettingsPage.tsx
src/store/: useConfirmStore.ts  useDebugLogStore.ts  useProfileStore.ts  useSettingsStore.ts  useToastStore.ts  useUpdaterStore.ts
(+36 files in other folders)
